typo: fix typo in nav bar

--- a/contact.html
+++ b/contact.html
@@ -15,30 +15,29 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="about-me.html">About me</a></li>
-									<li>
-										<a href="projects.html">Projects</a>
-										<ul>
-											<li><a href="slacker.html">Slacker</a></li>
-											<li><a href="somewhere.html">Somewhere</a></li>
-											<li><a href="mango-music.html">Mango Music</a></li>
-											<li><a href="placeholder.html">Placeholder</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="contact.html" class="button">Contact me</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
+				<nav id="nav">
+					<ul>
+						<li>
+							<a href="#" class="icon solid fa-angle-down">Menu</a>
+							<ul>
+								<li><a href="about-me.html">About me</a></li>
+								<li>
+									<a href="projects.html">Projects</a>
+									<ul>
+										<li><a href="slacker.html">Slacker</a></li>
+										<li><a href="somewhere.html">Somewhere</a></li>
+										<li><a href="mango-music.html">Mango Music</a></li>
+										<li><a href="placeholder.html">Placeholder</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a href="contact.html" class="button">Contact me</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
 				<section id="main" class="container medium">
