--- a/about-me.html
+++ b/about-me.html
@@ -19,9 +19,8 @@
 				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="#" class="icon solid fa-angle-down">Layouts</a>
+							<a href="#" class="icon solid fa-angle-down">Menu</a>
 							<ul>
 								<li><a href="about-me.html">About me</a></li>
 								<li>
