style: add home link to mobile nav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
 					<nav id="nav">
 						<ul>
+							<li id="home-menu"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Menu</a>
 								<ul>
@@ -56,7 +57,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 
-					<section class="box special">
+					<section class="box special home">
 						<header class="major">
 							<h4>I'm a fullstack JS/TS developer with a passion for everything web and mobile dev. 
 								Always trying to learn and grow, both in and out of work. Currently learning: Serverless!</h4>
