--- a/generic.html
+++ b/generic.html
@@ -19,6 +19,7 @@
 				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
 				<nav id="nav">
 					<ul>
+						<li id="home-menu"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Menu</a>
 							<ul>
