chore: add resume and update links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<p>Welcome to my portfolio site. 👋</p>
 						<ul class="actions special">
 							<li><a href="contact.html" class="button primary">Contact me</a></li>
-							<li><a href="#" class="button">Download Resume</a></li>
+							<li><a href="resume.pdf" target="_blank" class="button">Download Resume</a></li>
 						</ul>
 					</div>
 				</section>
@@ -187,24 +187,24 @@
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
+								<h3>Learning/Curiosity</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
+								<h3>Empathy/Kindness/Communication</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
+								<h3>Positivity</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
+								<h3>Consistency/Diligence</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
