style: replace placeholder values with text

--- a/index.html
+++ b/index.html
@@ -187,25 +187,25 @@
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Learning/Curiosity</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Learning</h3>
+								<p>Continual learning and an active curiosity are attributes that I think are indispensable not only to succeed as a software engineer, but also necessary ingredients for a fulfilling life </p>
 							</section>
 							<section>
 								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Empathy/Kindness/Communication</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Empathy</h3>
+								<p>Practicing empathy towards others and trying to understand fellow human beings help make the world a more kinder place. On a practical level, it also naturally trains interpersonal skills and improves my ability to communicate with others.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
 								<h3>Positivity</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>Most people who've met me in person would describe me as a relentless positive and cheerful person. I think being able to look on the bright side and make the most of any situation is a part of how I'm wired.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Consistency/Diligence</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Consistency</h3>
+								<p>Being consistent and diligent are the building blocks to mastering any skill. My personal belief is that consistent practice and discipline trumps ephemeral motivation any day!</p>
 							</section>
 						</div>
 					</section>
@@ -249,7 +249,7 @@
 						<li><a href="mailto:catherinechoi561@gmail.com?subject=Getting in touch with you from your website" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Catherine Choi. All rights reserved.</li>
 					</ul>
 				</footer>
 
