--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 					<li><a href="mailto:catherinechoi561@gmail.com?subject=Getting in touch with you from your website" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Catherine Choi. All rights reserved.</li>
 				</ul>
 			</footer>
 
