--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 							<b><a href="mailto:catherinechoi561@gmail.com?subject=Getting in touch with you from your website">Click here</a> </b>to send me an email or fill out the following form.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form id="home-form" action="https://formspree.io/f/meqnrrao" method="post">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
 									<input type="text" name="name" id="name" value="" placeholder="Name" />
