--- a/contact.html
+++ b/contact.html
@@ -52,16 +52,16 @@
 						<form id="home-form" action="https://formspree.io/f/meqnrrao" method="post">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
-									<input type="text" name="name" id="name" value="" placeholder="Name" />
+									<input type="text" name="name" id="name" value="" placeholder="Name" required />
 								</div>
 								<div class="col-6 col-12-mobilep">
-									<input type="email" name="email" id="email" value="" placeholder="Email" />
+									<input type="email" name="email" id="email" value="" placeholder="Email" required />
 								</div>
 								<div class="col-12">
 									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
 								</div>
 								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="message" id="message" placeholder="Enter your message" rows="6" required ></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions special">
