--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@
 					<h2>Get in touch</h2>
 					<p><b><a href="mailto:catherinechoi561@gmail.com?subject=Getting in touch with you from your website">Click here</a> </b>to send an email or fill out the following form.</p>
 
-					<form id="home-form">
+					<form id="home-form" action="https://formspree.io/f/meqnrrao" method="post">
 						<div class="row gtr-50 gtr-uniform">
 							<div class="col-5 col-12-mobilep">
-								<input type="text" name="name" id="name" value="" placeholder="Name" />
+								<input type="text" name="name" id="name" value="" placeholder="Name" required />
 							</div>
 							<div class="col-7 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
+								<input type="email" name="email" id="email" placeholder="Email Address" required />
 							</div>
 							<div class="col-12">
 								<input type="text" name="subject" id="subject" placeholder="Subject" />
 							</div>
 							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+								<textarea name="message" id="message" placeholder="Enter your message" rows="6" required ></textarea>
 							</div>
 							<div class="col-4 col-12-mobilep submit-btn">
 								<input type="submit" value="Send Message" class="fit" />
