chore: update angellist link in footer

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/catherine-margaret-choi/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/catherine-m-choi" class="icon brands fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon brands fa-angellist"><span class="label">Angellist</span></a></li>
+					<li><a href="https://angel.co/u/catherine-m-choi" class="icon brands fa-angellist"><span class="label">Angellist</span></a></li>
 					<li><a href="mailto:catherinechoi561@gmail.com?subject=Getting in touch with you from your website" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
