fix: clean internal links

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -9,33 +9,33 @@
 		<title>About me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
+				<h1><a href="/"><i class="fas fa-home"></i> Home</a></h1>
 				<nav id="nav">
 					<ul>
-						<li id="home-menu"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+						<li id="home-menu"><a href="/"><i class="fas fa-home"></i> Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Menu</a>
 							<ul>
-								<li><a href="about-me.html">About me</a></li>
+								<li><a href="/about-me">About me</a></li>
 								<li>
-									<a href="projects.html">Projects</a>
+									<a href="/projects">Projects</a>
 									<ul>
-										<li><a href="slacker.html">Slacker</a></li>
-										<li><a href="somewhere.html">Somewhere</a></li>
-										<li><a href="mango-music.html">Mango Music</a></li>
-										<li><a href="placeholder.html">Placeholder</a></li>
+										<li><a href="/slacker">Slacker</a></li>
+										<li><a href="/somewhere">Somewhere</a></li>
+										<li><a href="/mango-music">Mango Music</a></li>
+										<li><a href="/splitwise">WIP: Splitwise clone</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
-						<li><a href="contact.html" class="button">Contact me</a></li>
+						<li><a href="/contact" class="button">Contact me</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -47,12 +47,9 @@
 						<p>My name is Catherine, but you can call me Cat! 🐈</p>
 					</header>
 					<div class="box">
-						<!-- <span class="image featured"><img height="100px" src="images/banner.jpg" alt="" /></span> -->
-						<!-- <h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p> -->
 						<div class="row">
 							<div class="col-4 col-12-mobilep">
-								<span class="image fit"><img src="images/headshot.jpg" alt="" id="headshot" /></span>
+								<span class="image fit"><img src="/images/headshot.jpg" alt="" id="headshot" /></span>
 							</div>
 							<div class="col-8 col-12-mobilep">
 								<h3>Nice to meet you!</h3>
@@ -77,7 +74,7 @@
 					</div>
 
 					<div class="box">
-						<span class="image featured"><img height="100px" src="images/banner.jpg" alt="" /></span>
+						<span class="image featured"><img height="100px" src="/images/banner.jpg" alt="" /></span>
 						<h3>Hobbies</h3>
 						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
 					</div> -->
@@ -121,7 +118,7 @@
 					<ul class="actions special">
 						<li><a href="https://github.com/catherine-m-choi" class="button">Github</a></li>
 						<li><a href="resume.pdf" target="_blank" class="button">Resume</a></li>
-						<!-- <li><a href="contact.html" class="button">Contact me</a></li> -->
+						<!-- <li><a href="contact" class="button">Contact me</a></li> -->
 					</ul>
 					
 				</section>
@@ -142,13 +139,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.dropotron.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
