--- a/projects/index.html
+++ b/projects/index.html
@@ -9,33 +9,33 @@
 		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
+				<h1><a href="/"><i class="fas fa-home"></i> Home</a></h1>
 				<nav id="nav">
 					<ul>
-						<li id="home-menu"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+						<li id="home-menu"><a href="/"><i class="fas fa-home"></i> Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Menu</a>
 							<ul>
-								<li><a href="about-me.html">About me</a></li>
+								<li><a href="/about-me">About me</a></li>
 								<li>
-									<a href="projects.html">Projects</a>
+									<a href="/projects">Projects</a>
 									<ul>
-										<li><a href="slacker.html">Slacker</a></li>
-										<li><a href="somewhere.html">Somewhere</a></li>
-										<li><a href="mango-music.html">Mango Music</a></li>
-										<li><a href="placeholder.html">Placeholder</a></li>
+										<li><a href="/slacker">Slacker</a></li>
+										<li><a href="/somewhere">Somewhere</a></li>
+										<li><a href="/mango-music">Mango Music</a></li>
+										<li><a href="/splitwise">WIP: Splitwise clone</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
-						<li><a href="contact.html" class="button">Contact me</a></li>
+						<li><a href="/contact" class="button">Contact me</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -55,12 +55,12 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="slacker.html"><img src="images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
+								<span class="image featured"><a href="../slacker"><img src="/images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
 								<h3>Slacker</h3>
 								<p>A slack clone with google OAuth that uses web sockets for real-time chat. Built using Rails, PostgreSQL, and React/Redux.<p>
 								<ul class="actions special">
 									<li>
-										<a href="slacker.html" class="button alt">Learn More</a>
+										<a href="../slacker" class="button alt">Learn More</a>
 									</li>
 								</ul>
 							</section>
@@ -69,11 +69,11 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="somewhere.html"><img src="images/01.png" alt="screenshots of somewhere, a vanilla javascript platformer" /></a></span>
+								<span class="image featured"><a href="../somewhere"><img src="/images/01.png" alt="screenshots of somewhere, a vanilla javascript platformer" /></a></span>
 								<h3>Somewhere</h3>
 								<p>A platforming game with multiple levels and custom-designed physics engine. Built using vanilla javascript, CSS, and HTML Canvas.</p>
 								<ul class="actions special">
-									<li><a href="somewhere.html" class="button alt">Learn More</a></li>
+									<li><a href="../somewhere" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -81,11 +81,11 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="mango-music.html"><img src="images/03.png" alt="screenshots of mango music, a music based social media website" /></a></span>
+								<span class="image featured"><a href="../mango-music"><img src="/images/03.png" alt="screenshots of mango music, a music based social media website" /></a></span>
 								<h3>Mango Music</h3>
 								<p>A social media platform for music lovers, using Spotify's API to search for songs and grab song details. Built using MongoDB, Express/Node, and React/Redux.</p>
 								<ul class="actions special">
-									<li><a href="mango-music.html" class="button alt">Learn More</a></li>
+									<li><a href="../mango-music" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -93,11 +93,11 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="placeholder.html"><img src="images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
-								<h3>Placeholder</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="image featured"><a href="../splitwise"><img src="/images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
+								<h3>WIP: Splitwise clone</h3>
+								<p>A clone of the app splitwise that allows users to track and split bills with friends. Hooks up to Venmo's API to support payments between users.</p>
 								<ul class="actions special">
-									<li><a href="placeholder.html" class="button alt">Learn More</a></li>
+									<li><a href="../splitwise" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -121,13 +121,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.dropotron.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
