--- a/contact/index.html
+++ b/contact/index.html
@@ -9,33 +9,33 @@
 		<title>Contact - Alpha by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html"><i class="fas fa-home"></i> Home</a></h1>
+				<h1><a href="/"><i class="fas fa-home"></i> Home</a></h1>
 				<nav id="nav">
 					<ul>
-						<li id="home-menu"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+						<li id="home-menu"><a href="/"><i class="fas fa-home"></i> Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Menu</a>
 							<ul>
-								<li><a href="about-me.html">About me</a></li>
+								<li><a href="/about-me">About me</a></li>
 								<li>
-									<a href="projects.html">Projects</a>
+									<a href="/projects">Projects</a>
 									<ul>
-										<li><a href="slacker.html">Slacker</a></li>
-										<li><a href="somewhere.html">Somewhere</a></li>
-										<li><a href="mango-music.html">Mango Music</a></li>
-										<li><a href="placeholder.html">Placeholder</a></li>
+										<li><a href="/slacker">Slacker</a></li>
+										<li><a href="/somewhere">Somewhere</a></li>
+										<li><a href="/mango-music">Mango Music</a></li>
+										<li><a href="/splitwise">WIP: Splitwise clone</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
-						<li><a href="contact.html" class="button">Contact me</a></li>
+						<li><a href="/contact" class="button">Contact me</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -89,13 +89,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.dropotron.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
