chore: add to project descriptions

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="slacker"><img src="images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
+								<span class="image featured"><a href="slacker"><img src="/images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
 								<h3>Slacker</h3>
 								<p>A slack clone with google OAuth that uses web sockets for real-time chat. Built using Rails, PostgreSQL, and React/Redux.<p>
 								<ul class="actions special">
@@ -145,7 +145,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="somewhere"><img src="images/01.png" alt="screenshots of somewhere, a vanilla javascript platformer" /></a></span>
+								<span class="image featured"><a href="somewhere"><img src="/images/01.png" alt="screenshots of somewhere, a vanilla javascript platformer" /></a></span>
 								<h3>Somewhere</h3>
 								<p>A platforming game with multiple levels and custom-designed physics engine. Built using vanilla javascript, CSS, and HTML Canvas.</p>
 								<ul class="actions special">
@@ -157,7 +157,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="mango-music"><img src="images/03.png" alt="screenshots of mango music, a music based social media website" /></a></span>
+								<span class="image featured"><a href="mango-music"><img src="/images/03.png" alt="screenshots of mango music, a music based social media website" /></a></span>
 								<h3>Mango Music</h3>
 								<p>A social media platform for music lovers, using Spotify's API to search for songs and grab song details. Built using MongoDB, Express/Node, and React/Redux.</p>
 								<ul class="actions special">
@@ -169,7 +169,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="splitwise"><img src="images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
+								<span class="image featured"><a href="../splitwise"><img src="/images/placeholder_01.jpg" alt="blurred image" /></a></span>
 								<h3>WIP: Splitwise clone</h3>
 								<p>A clone of the app splitwise that allows users to track and split bills with friends. Hooks up to Venmo's API to support payments between users.</p>
 								<ul class="actions special">
