--- a/projects/index.html
+++ b/projects/index.html
@@ -93,7 +93,7 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><a href="../splitwise"><img src="/images/02_2.png" alt="screenshots of slacker, a slack clone" /></a></span>
+								<span class="image featured"><a href="../splitwise"><img src="/images/placeholder_01.jpg" alt="blurred image" /></a></span>
 								<h3>WIP: Splitwise clone</h3>
 								<p>A clone of the app splitwise that allows users to track and split bills with friends. Hooks up to Venmo's API to support payments between users.</p>
 								<ul class="actions special">
