--- a/somewhere/index.html
+++ b/somewhere/index.html
@@ -52,28 +52,31 @@
 						</p>
 					</header>
 					<div class="box">
-						<h3>Brief description</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-						<h2>TODO: INSERT SCREEN-RECORDING</h2>
-						<span class="image fit"><img src="/images/01.png" alt="screenshots of somewhere, a vanilla javascript platformer" /></span>
+						<p>A cute platformer game written in vanilla Javascript where a character 
+							explores multiple levels, battles enemies, and collect coins. In Somewhere, 
+							users are able to:
+							<ul>
+								<li>Start, restart, and exit the game.</li>
+								<li>Players can select their difficulty level.</li>
+								<li>Move their character using either the A, D or Left and Right Arrow keys</li>
+								<li>Jump with space bar and attack with j</li>
+								<li>Move between levels</li>
+							</ul>
+
+							In addition, this project has a menu which allows players to view instructions, select a difficulty level, and mute audio.
+						</p>
 						
-						List of technologies (sub-in logo)
+						<span class="image fit"><img src="/images/somewhere_screen_recording.gif" alt="video recording of somewhere, a vanilla javascript platformer" /></span>
+
+						<h3>Technologies used:</h3>
 						<ul>
-							<li>Javascript</li>
+							<li>Vanille Javascript</li>
 							<li>HTML Canvas</li>
 							<li>CSS</li>
 							<li>webpack</li>
 							<li>npm</li>
 						</ul>
-
-						<h3>Highlight #1</h3>
-						<h3>Highlight #2</h3>
-						TODO: INSERT CODE BLOCK
-						<pre>
-const banana = () => {
-	return "I am bananas for bananas"
-}</pre>
-
+						
 					</div>
 				</section>
 
