--- a/mango-music/index.html
+++ b/mango-music/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Mango Music</title>
@@ -52,12 +47,10 @@
 						</p>
 					</header>
 					<div class="box">
-						<h3>Brief description</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-						<h2>TODO: INSERT SCREEN-RECORDING</h2>
-						<span class="image fit"><img src="/images/03.png" alt="screenshots of mango music, a music based social media website" /></span>
+						<p>Mango Music is a social media platform in which users can build connections over what they love the most, music! Users can search for tracks, discover new tunes, listen to song previews, and most importantly, share their thoughts and start a discussion about a particular piece. Whether visitors prefer meeting new people by visiting the explore page or sharing the new indie band they just dicovered with their tight-knit circle, Mango Music has something for all music lovers alike. Visit Mango Music today and see what all the hype is about.</p>
+						<span class="image fit"><img src="/images/mango_screen_recording.gif" alt="screen recording of mango music, a music based social media website" /></span>
 						
-						List of technologies (sub-in logo)
+						<h3>Technologies used:</h3>
 						<ul>
 							<li>MongoDB</li>
 							<li>Express</li>
@@ -66,14 +59,40 @@
 							<li>APIs: Spotify, Genius, and Lyrics Ovh</li>
 						</ul>
 
-						<h3>Highlight #1</h3>
-						<h3>Highlight #2</h3>
-						TODO: INSERT CODE BLOCK
-						<pre>
-const banana = () => {
-	return "I am bananas for bananas"
-}</pre>
+						<h3>Featured code snippet: Searching for songs using Spotify API:</h3>
+<pre>
+router.get("/search", (req, res) => {
+	getAuth()
+	.then(data => {
+		const token = "Bearer " + data.access_token;
+		let search_url = "https://api.spotify.com/v1/search?";
+		
+		let params = []
+		for (let k in req.query) {
+			params.push(`${k}=${req.query[k]}`)
+		}
+		search_url += params.join("&");
+		
+		const response = axios.get(search_url, {
+			headers: { 
+				'Authorization': token
+			}
+		})
+		
+		return response;
+	})
+	.then(payload => {
+		return res.json(payload.data)
+	}, err =>  res.status(400).json(err))
+});</pre>
 
+						<p>
+							To fetch data from the Spotify Web API, we first use the function `getAuth`
+							to send a POST request to the `/api/token` Spotify API endpoint, with including 
+							the Authorization and Content-Type in the headers of the request. Once we receive a 
+							response with the temporary Spotify access token, we use that token to send another 
+							request to spotify's search endpoint with our specified search parameters such as song title.
+						</p>
 					</div>
 				</section>
 
