--- a/slacker/index.html
+++ b/slacker/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Slacker</title>
@@ -52,25 +47,48 @@
 						</p>
 					</header>
 					<div class="box">
-						<h3>Brief description</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-						<h2>TODO: INSERT SCREEN-RECORDING</h2>
-						<span class="image fit"><img src="/images/02_2.png" alt="screenshots of slacker, a slack clone" /></span>
+						<p>Slacker is a clone of Slack, a messaging app for teams and workspaces. On Slacker, users can create and join channels and group chats. They can pin messages to a chat, save messages for that only they can see, and reply to messages in a thread. Users can also sign up or log in with Google via OAuth2..</p>
 						
-						List of technologies (sub-in logo)
+						<h3>Technologies used:</h3>
 						<ul>
-							<li>Ruby/Rails</li>
-							<li>PostgreSQL</li>
-							<li>React/Redux</li>
+							<li>Frontend: React, Redux, SCSS</li>
+							<li>Backend: Ruby on Rails, PostgreSQL</li>
+							<li>Live Chat: Action Cable WebSockets</li>
+							<li>Google Oauth: <a href="https://github.com/zquestz/omniauth-google-oauth2">OmniAuth Google OAuth2</a></li>
+							<li>Giphy search: <a href="https://developers.giphy.com/docs/api">Giphy API</a></li>
+							<li>Emoji picker: <a href="https://github.com/ealush/emoji-picker-react">React Emoji Picker</a></li>
 						</ul>
+						
+						<span class="image fit"><img src="/images/slacker_screen_recording_new_channel.gif" alt="gif of video recording of slacker, a slack clone" /></span>
 
-						<h3>Highlight #1 – OAuth</h3>
-						<h3>Highlight #2 – Websockets</h3>
-						TODO: INSERT CODE BLOCK
-						<pre>
-const banana = () => {
-	return "I am bananas for bananas"
-}</pre>
+						<h3>Live chat with websockets</h3>
+						<p>Users can live chat in channels, conversations, and threads.</p>
+
+						<h3>Channels and Conversations</h3>
+						<p>Users can create new channels. They can also add other users to channels 
+							or remove users from a channel. Similarly, Users can use the All DMs tab 
+							or New Message button to start new direct messages or group chats. They 
+							can also add other users to conversations.</p>
+
+						<h3>Messages</h3>
+						<p>Users can pin messages to a conversation or channel.
+							They can also save messages for themselves and view them later in the the Save items tab.</p>
+
+						<h3>Gifs and emojis</h3>
+						<p>Users can select from an emoji-library to add emojis to their message text. 
+							User can also send giphy messages by typing /giphy [text] into the message text box,
+							to randomly fetch a giphy image related to the text.
+						</p>
+
+						<h3>Google oauth</h3>
+						<p>Users can log in or sign up with their google account.</p>
+
+						<h3>Search</h3>
+						<p>
+							Users can search through messages, channels, and people.
+							They can filter their search by clicking on the appropriate category
+							They can also filter their search by starting search queries with @ to search for users and # to search for channels.
+						</p>
 
 					</div>
 				</section>
