--- a/splitwise/index.html
+++ b/splitwise/index.html
@@ -44,36 +44,19 @@
 				<section id="main" class="container">
 					<header>
 						<h2>WIP: Splitwise clone</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, labore exercitationem numquam non nemo ea. Consectetur error eaque quos dicta, eum, laborum repudiandae commodi, repellat dolor veritatis sint molestiae alias?</p>
+						<p>This is a work-in-progress. Come back later for updates</p>
 							<ul class="actions special">
-								<li><a href="http://mango-music-fsp.herokuapp.com/" class="button alt primary">Live page</a></li>
-								<li><a href="https://github.com/MangoMusicMedia/mango-music" class="button alt">Github</a></li>
+								<li><a href="https://github.com/catherine-m-choi" class="button alt primary">Github</a></li>
+								<!-- <li><a href="https://github.com/catherine-m-choi" class="button alt">Github</a></li> -->
 							</ul>
 						</p>
 					</header>
 					<div class="box">
-						<h3>Brief description</h3>
-						<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
-						<h2>TODO: INSERT SCREEN-RECORDING</h2>
-						<span class="image fit"><img src="/images/03.png" alt="screenshots of mango music, a music based social media website" /></span>
-						
-						List of technologies (sub-in logo)
-						<ul>
-							<li>MongoDB</li>
-							<li>Express</li>
-							<li>React/Redux</li>
-							<li>Node</li>
-						</ul>
-
-						<h3>Highlight #1</h3>
-						<h3>Highlight #2</h3>
-						TODO: INSERT CODE BLOCK
-						<pre>
-const banana = () => {
-	return "I am bananas for bananas"
-}</pre>
-
+						<p>Hi, thanks for stopping by! This page (and project) is 
+							still under construction, so please check back in at a 
+							later time. Thanks for your understanding! :)</p>
 					</div>
+						
 				</section>
 
 			<!-- Footer -->
